<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="move_right">Right</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="move_left">Left</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="timer">Timer %1$d</string>
    <string name="text">text</string>
    <string name="timerLeft">Timer left: %1$d</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
</resources>
